--- a/clean/index.html
+++ b/clean/index.html
@@ -104,7 +104,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Generación cero</h2>
 					<p>• Maquinas que funcionaban a base de ruedas y engranaje. <br>• Realizaban operaciones aritmeticas.   </p>
-					<p><a href="#" class="btn btn-primary">Línea del tiempo</a></p>
+					<p><a href="../jQuery-Timelinr-master/gencero.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
@@ -112,7 +112,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Primera generación</h2>
 					<p>• Contenían tubos al vacío (18,000 bulbos), al calentarse producían errores. <br>• Estaban compuestas aproximadamente por 200,000 piezas mecánicas y 800,000 metros de cable, por lo que ocupaban mucho espacio físico. <br>• Requerían mucha ventilación. <br>• No se podía cancelar un proceso. <br>• 1,000 instrucciones por segundo.</p>
-					<p><a href="#" class="btn btn-primary">Línea del tiempo</a></p>
+					<p><a href="../jQuery-Timelinr-master/primeragen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item ">
@@ -120,7 +120,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Segunda generación</h2>
 					<p>• Aparecen los transistores que reemplazan a los bulbos.<br>• Consumían menos energía. <br>• Ocupaban menos espacio. <br>• Capacidad de memoria ampliada. <br>• 10,000 instrucciones por segundo. <br>• Suren los primeros lenguajes de computación (FORTRAN).</p>
-					<p><a href="#" class="btn btn-primary">Línea del tiempo</a></p>
+					<p><a href="../jQuery-Timelinr-master/segundagen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
@@ -128,7 +128,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Tercera generación</h2>
 					<p>• Transistores reemplazados por circuitos integrados. <br>• Más pequeñas y menos costosas. <br>• 1,000,000 de instrucciones por segundo. <br>• Varias tareas al mismo tiempo. <br>• Comercialización de primeras minicomputadoras (poca capacidad, para usuarios que no necesitaban un gran sistema). </p>
-					<p><a href="#" class="btn btn-primary">Línea del tiempo</a></p>
+					<p><a href="../jQuery-Timelinr-master/terceragen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item ">
@@ -136,7 +136,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Cuarta generación</h2>
 					<p>• Aparece el microprocesador. <br>• El circuito integrado utilizado en esta generación hace a la computadora mucho más rápida. <br>• Aumento de eficiencia y reducción de tamaño y costos.</p>
-					<p><a href="#" class="btn btn-primary">Línea del tiempo</a></p>
+					<p><a href="../jQuery-Timelinr-master/cuartagen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
 			</div>
 			<div class="fh5co-portfolio-item fh5co-img-right">
@@ -144,7 +144,7 @@
 				<div class="fh5co-portfolio-description">
 					<h2>Quinta generación</h2>
 					<p>• Surge la PC tal cual como la conocemos.<br>• IBM presenta su primera PC. <br>• Con la microelectrónica crece el desarrollo de Software.  </p>
-					<p><a href="#" class="btn btn-primary">Línea del tiempo</a></p>
+					<p><a href="../jQuery-Timelinr-master/quintagen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
 			</div>
 		</div>
@@ -161,10 +161,6 @@
 								</figure>
 								<h3>José Luis Castro</h3>
 								<p>Carrera: Ingeniería de Software</p>
-								<ul class="fh5co-social">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul> 	
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
 								<figure>
@@ -172,10 +168,6 @@
 								</figure>
 								<h3>Felipe Ortega</h3>
 								<p>Carrera: Ingeniería de Software </p>
-								<ul class="fh5co-social">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul> 	
 							</div>
 							<div class="clearfix visible-sm-block visible-xs-block"></div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
@@ -184,13 +176,8 @@
 								</figure>
 								<h3>Carinna García</h3>
 								<p>Carrera: Ingeniería en Diseño Grafico Digital  </p>
-								<ul class="fh5co-social">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-github"></i></a></li>
-								</ul> 	
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
-								
 								</ul> 	
 							</div>
 						</div>
