--- a/clean/index.html
+++ b/clean/index.html
@@ -164,7 +164,7 @@
 							</div>
 							<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-staff to-animate">
 								<figure>
-								<img src="images/user.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
+								<img src="images/user_3.jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
 								</figure>
 								<h3>Felipe Ortega</h3>
 								<p>Carrera: Ingeniería de Software </p>
