--- a/clean/index.html
+++ b/clean/index.html
@@ -102,7 +102,7 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_1.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Generación cero</h2>
+					<h2>Generación cero (1642-1945)</h2>
 					<p>• Maquinas que funcionaban a base de ruedas y engranaje. <br>• Realizaban operaciones aritmeticas.   </p>
 					<p><a href="../jQuery-Timelinr-master/gencero.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
@@ -110,7 +110,7 @@
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_2.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Primera generación</h2>
+					<h2>Primera Generación: Los tubos de Vacío (1945 - 1956)</h2>
 					<p>• Contenían tubos al vacío (18,000 bulbos), al calentarse producían errores. <br>• Estaban compuestas aproximadamente por 200,000 piezas mecánicas y 800,000 metros de cable, por lo que ocupaban mucho espacio físico. <br>• Requerían mucha ventilación. <br>• No se podía cancelar un proceso. <br>• 1,000 instrucciones por segundo.</p>
 					<p><a href="../jQuery-Timelinr-master/primeragen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
@@ -118,7 +118,7 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_3.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Segunda generación</h2>
+					<h2>Segunda generación: Los transistores (1956 - 1965)</h2>
 					<p>• Aparecen los transistores que reemplazan a los bulbos.<br>• Consumían menos energía. <br>• Ocupaban menos espacio. <br>• Capacidad de memoria ampliada. <br>• 10,000 instrucciones por segundo. <br>• Suren los primeros lenguajes de computación (FORTRAN).</p>
 					<p><a href="../jQuery-Timelinr-master/segundagen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
@@ -126,7 +126,7 @@
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_4.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Tercera generación</h2>
+					<h2>Tercera generación: Los circuitos integrados (1965 - 1970)</h2>
 					<p>• Transistores reemplazados por circuitos integrados. <br>• Más pequeñas y menos costosas. <br>• 1,000,000 de instrucciones por segundo. <br>• Varias tareas al mismo tiempo. <br>• Comercialización de primeras minicomputadoras (poca capacidad, para usuarios que no necesitaban un gran sistema). </p>
 					<p><a href="../jQuery-Timelinr-master/terceragen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
@@ -134,7 +134,7 @@
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_5.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Cuarta generación</h2>
+					<h2>Cuarta Generación: Los circuitos integrados LSI (1971 - 1980)</h2>
 					<p>• Aparece el microprocesador. <br>• El circuito integrado utilizado en esta generación hace a la computadora mucho más rápida. <br>• Aumento de eficiencia y reducción de tamaño y costos.</p>
 					<p><a href="../jQuery-Timelinr-master/cuartagen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
@@ -142,7 +142,7 @@
 			<div class="fh5co-portfolio-item fh5co-img-right">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/work_6.jpg);"></div>
 				<div class="fh5co-portfolio-description">
-					<h2>Quinta generación</h2>
+					<h2>Quinta generación: (1981 - actualidad)</h2>
 					<p>• Surge la PC tal cual como la conocemos.<br>• IBM presenta su primera PC. <br>• Con la microelectrónica crece el desarrollo de Software.  </p>
 					<p><a href="../jQuery-Timelinr-master/quintagen.html" class="btn btn-primary">Línea del tiempo</a></p>
 				</div>
