--- a/jQuery-Timelinr-master/cuartagen.html
+++ b/jQuery-Timelinr-master/cuartagen.html
@@ -22,7 +22,7 @@
 	
 	<div id="timeline">
 		<ul id="dates">
-			<li><a href="#4G">4G</a></li>
+			<li><a href="#4G">G.4</a></li>
 			<li><a href="#1971">1971</a></li>
 			<li><a href="#1971">1971</a></li>
 			<li><a href="#1974">1974</a></li>
@@ -78,7 +78,7 @@
 		<a href="#" id="prev">-</a>
 	</div>
 	
-	<h1>CSSLab.cl - jQuery Timelinr - Horizontal </h1>
+	<h1>VOLVER A INICIO <a href="../clean/index.html" title="Volver a inicio">[Volver/Back]</a></h1>
 	<h2>&copy; 2013 CSSLab.cl</h2>
 
 </body>
