--- a/jQuery-Timelinr-master/gencero.html
+++ b/jQuery-Timelinr-master/gencero.html
@@ -22,7 +22,7 @@
 	
 	<div id="timeline">
 		<ul id="dates">
-			<li><a href="#G0">G0</a></li>
+			<li><a href="#G0">G.0</a></li>
 			<li><a href="#5ka.C.">a.C.</a></li>
 			<li><a href="#1642">1642</a></li>
 			<li><a href="#1694">1694</a></li>
@@ -73,7 +73,7 @@
 		<a href="#" id="prev">-</a>
 	</div>
 	
-	<h1>CSSLab.cl - jQuery Timelinr - Horizontal </h1>
+	<h1>VOLVER A INICIO <a href="../clean/index.html" title="Volver a inicio">[Volver/Back]</a></h1>
 	<h2>&copy; 2013 CSSLab.cl</h2>
 
 </body>
