--- a/jQuery-Timelinr-master/primeragen.html
+++ b/jQuery-Timelinr-master/primeragen.html
@@ -22,7 +22,7 @@
 	
 	<div id="timeline">
 		<ul id="dates">
-			<li><a href="#1G">1G</a></li>
+			<li><a href="#1G">G.1</a></li>
 			<li><a href="#1945">1945</a></li>
 			<li><a href="#1952">1952</a></li>
 			
@@ -50,7 +50,7 @@
 		<a href="#" id="prev">-</a>
 	</div>
 	
-	<h1>CSSLab.cl - jQuery Timelinr - Horizontal </h1>
+	<h1>VOLVER A INICIO <a href="../clean/index.html" title="Volver a inicio">[Volver/Back]</a></h1>
 	<h2>&copy; 2013 CSSLab.cl</h2>
 
 </body>
