--- a/jQuery-Timelinr-master/quintagen.html
+++ b/jQuery-Timelinr-master/quintagen.html
@@ -22,7 +22,7 @@
 	
 	<div id="timeline">
 		<ul id="dates">
-			<li><a href="#5G">5G</a></li>
+			<li><a href="#5G">G.5</a></li>
 			
 			<li><a href="#1984">1984</a></li>
 			<li><a href="#1994">1994</a></li>
@@ -51,7 +51,7 @@
 		<a href="#" id="prev">-</a>
 	</div>
 	
-	<h1>CSSLab.cl - jQuery Timelinr - Horizontal <a </h1>
+	<h1>VOLVER A INICIO <a href="../clean/index.html" title="Volver a inicio">[Volver/Back]</a></h1>
 	<h2>&copy; 2013 CSSLab.cl</h2>
 
 </body>
