--- a/jQuery-Timelinr-master/segundagen.html
+++ b/jQuery-Timelinr-master/segundagen.html
@@ -22,7 +22,7 @@
 	
 	<div id="timeline">
 		<ul id="dates">
-			<li><a href="#1G">2G</a></li>
+			<li><a href="#1G">G.2</a></li>
 			<li><a href="#1956">1956</a></li>
 			<li><a href="#1962">1962</a></li>
 			<li><a href="#1964">1964</a></li>
@@ -55,7 +55,7 @@
 		<a href="#" id="prev">-</a>
 	</div>
 	
-	<h1>CSSLab.cl - jQuery Timelinr - Horizontal </h1>
+	<h1>VOLVER A INICIO <a href="../clean/index.html" title="Volver a inicio">[Volver/Back]</a></h1>
 	<h2>&copy; 2013 CSSLab.cl</h2>
 
 </body>
