--- a/jQuery-Timelinr-master/terceragen.html
+++ b/jQuery-Timelinr-master/terceragen.html
@@ -22,7 +22,7 @@
 	
 	<div id="timeline">
 		<ul id="dates">
-			<li><a href="#1G">3G</a></li>
+			<li><a href="#1G">G.3</a></li>
 			<li><a href="#1965">1965</a></li>
 		</ul>
 		<ul id="issues">
@@ -43,7 +43,7 @@
 		<a href="#" id="prev">-</a>
 	</div>
 	
-	<h1>CSSLab.cl - jQuery Timelinr - Horizontal </h1>
+	<h1>VOLVER A INICIO <a href="../clean/index.html" title="Volver a inicio">[Volver/Back]</a></h1>
 	<h2>&copy; 2013 CSSLab.cl</h2>
 
 </body>
