--- a/clean/index.html
+++ b/clean/index.html
@@ -189,6 +189,19 @@
 	
 
 	</div>
+	<h1><b><CENTER>Referencias:</CENTER></b></h1>
+		<h3><br>Ramírez, I. (s.f.). Introducción a las computadoras [Archivo PDF]. Recuperado de http://www.uprm.edu/cti/docs/manuales/manuales-espanol/vax-vms/manuales/Intcomp.pdf 
+
+		<br><br>Evolución de las computadoras. (2015). En Line. Recuperado de https://line.do/es/evolucion-de-las-computadoras/l8i/vertical 
+
+		<br><br>Ortiz, F. (2013). Evolución de las computadoras [Archivo PDF]. Recuperado de http://ingenieria.aragon.unam.mx/iid/apuntes/formatos/Fundamentos.pdf 
+
+		<br><br>Sánchez, G. (2013). Uso de la Tecnología en el Aula. Recuperado de https://books.google.com.mx/books?id=seH9MVl_F_8C&pg=PT27&dq#v=onepage&q&f=false
+
+		<br><br>Cedano, M., Cedano, A., Rubio, J. y Vega, A. (2014). Fundamentos de Computación para Ingenieros. México: Patria. Recuperado de https://books.google.com.mx/books?id=Kt3hBAAAQBAJ&pg
+
+		<br><br>Sánchez, L. (2005). Informática.  México: Pearson Educación. Recuperado de https://books.google.com.mx/books?id=X6kZPnM2RPkC&pg
+	</h3>
 
 	<footer id="fh5co-footer">
 		<div class="container">
